# gadugi

./: .decomposer_patterns.json  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .task_id  AGENT_HIERARCHY.md  CLAUDE-legacy.md  CLAUDE.md  CLAUDE_LEGACY.md  CLAUDE_MIGRATION_GUIDE.md  CLAUDE_REFACTORED.md  CLAUDE_TEMPLATE.md  CODE_REVIEW_PHASE_9.md  CONTRIBUTING.md  DATA_MODELS_IMPLEMENTATION_SUMMARY.md  DESIGN_ISSUES.md  DIAGNOSTIC_ANALYSIS.md  FINAL_ANALYSIS.md  ISSUE_9_CHECKLIST_ANALYSIS.md  ISSUE_IMPORT_PATHS.md  LICENSE  MIGRATION_PLAN_REVIEW.md  ORCHESTRATOR_EXECUTION_SUMMARY.md  ORCHESTRATOR_PARALLEL_EXECUTION_REPORT.md  PHASE_10_REVIEW_RESPONSE.md  PHASE_11_SETTINGS_SUMMARY.md  PR_MAINTENANCE_WORK_SUMMARY.md  PYRIGHT_FIXES_DOCUMENTATION.md  PYRIGHT_FIX_STRATEGY.md  PYRIGHT_FIX_SUMMARY.md  PYRIGHT_IMPROVEMENT_SUMMARY.md  README-SYSTEM-REVIEW.md  README-pr-backlog-manager.md  README.md  README_SECTION.md  REGENERATION_SUCCESS.md  RUN_V0.3_GUIDE.md  SELF_HOSTING_FINAL_RESULTS.md  SELF_HOSTING_STATUS.md  (+189 more)
.claude/: CLAUDE-legacy.md  Guidelines.md  INSTALLATION_STRUCTURE.md  README.md  REPOSITORY_STRUCTURE.md  __init__.py  claude-generic-instructions.md  prompt-writer.md  settings.json
.devcontainer/: devcontainer.json  setup.sh
.gadugi/: .env.example  docker-compose.yml
.github/: CodeReviewerProjectMemory.md  CodeReviewerProjectMemory.md.bak  LongTermMemoryDetails.md  Memory.md  deployment-readiness-pr262.md  deployment-readiness-pr263.md  team-coach-reflection-pr263.md  team-coach-session.json
.memory/: README.md
.memory_utils/: README.md  __init__.py  agent_interface.py  agent_memory_wrapper.py  cleanup_old_system.py  memory_manager.py  migration_tool.py  security_manager.py  test_memory_system.py
.prompts/: team-coach-label-implementation.md
.recipe_build/: state.json
.recipe_build/regenerated/generated_recipe-executor/: .gitignore  README.md  cli.py  pyproject.toml
.recipe_build/regenerated/generated_recipe-executor/src/: __init__.py  claude_code_generator.py  dependency_resolver.py  orchestrator.py  python_standards.py  quality_gates.py  recipe_decomposer.py  recipe_model.py  recipe_parser.py  recipe_validator.py  state_manager.py  test_generator.py  validator.py
.recipe_build/regenerated/generated_recipe-executor/tests/: test_recipe_executor.py
.task/: created  description  id  name  review_setup.md
agents/: agent-manager.md
compat/: __init__.py  error_handling.py  github_operations.py  interfaces.py  state_management.py  task_tracking.py  xpia_defense.py
components/: prompt_generator.pyi
config/: manifest.yaml  vscode-claude-terminals.json
container_runtime/: README.md  __init__.py  agent_integration.py  audit_logger.py  container_manager.py  demo.py  execution_engine.py  image_manager.py  resource_manager.py  security_policy.py  security_research.md
docs/: AGENT_IMPLEMENTATION_GUIDE.md  api-reference.md  architecture.md  claude-orchestration-quickstart.md  enhanced-workflowmaster-guide.md  environment-setup.md  error-handling-guidelines.md  event_service_guide.md  getting-started.md  lessons-learned-team-coach-issue.md  migration-to-claude-orchestration.md  neo4j-service-guide.md  orchestrator-governance.md  parallel-test-task-1.md  pr-backlog-manager-guide.md  pre-commit-setup.md  pyright-type-checking-guide.md  qa-framework.md  system-design-reviewer-integration-guide.md  task-decomposition-analyzer-guide.md  task-id-traceability.md  team-coach-github-integration.md  team-coach-usage.md  test-agents-guide.md  testing-workflow.md  testing.md  troubleshooting.md  uv-cheat-sheet.md  uv-installation-guide.md  uv-migration-guide.md  workflows.md
examples/: gadugi-config.yaml
gadugi/: __init__.py
gadugi-v0.3/: .pre-commit-config.yaml  AGENT_INSTRUCTIONS.md  MANIFEST.in  pyproject.toml  pyrightconfig.json  setup.py
memory_utils/: agent_interface.py
neo4j/: init_db.py  neo4j_client.py  schema.cypher  test_connection.py
neo4j-setup/: test_connection.py
neo4j_client/: __init__.py  client.py
prompts/: CodeReviewResponseAgent.md  CodeReviewSubAgent.md  OrchestratorAgent.md  PromptWriter.md  WorkflowMaster.md  achieve-zero-pyright-errors.md  add-agent-registration-validation-248.md  add-pr-merge-approval-policy.md  add-v0.1-release-notes-workflow.md  add-v0.1-release-notes.md  agent-framework-implementation.md  amend-pr-263-remaining-suppressions.md  analyze-categorize-type-errors.md  analyze-orchestrator-workflowmaster-architecture.md  claude-code-hooks-integration.md  claude-settings-update-agent.md  cleanup-all-worktrees-workflow.md  cleanup-all-worktrees.md  commit-uncommitted-changes-main.md  complete-pr-262-phases-9-13.md  complete-pr-262-phases.md  complete-pr-263-phases.md  complete-team-coach-implementation.md  complete-testing-suite.md  complete-workflow-pr-270.md  complete-workflow-pr-278.md  complete-workflow-pr-279.md  complete-workflow-pr-280.md  complete-workflow-pr-281.md  complete-workflow-pr-282.md  complete-workflow-pr-286.md  complete-workflow-pr-287.md  complete-workflow-pr-293.md  complete-workflow-pr-294.md  complete-workflow-pr-295.md  complete-workflow-pr-296.md  configure-claude-code-start-hook.md  continue-pr-262-workflow.md  continue-pr-263-review.md  create-cli-orchestrator-dashboard.md  (+130 more)
proto/: events.proto
scripts/: claude-worktree-manager.sh  launch-claude-terminals.sh  launch-claude-vscode.py  parallel_test_task_1.py  restart-claude-worktrees.sh  setup_neo4j.sh
src/: extension.ts  monitor_selfhost.sh  test_framework_bug_simple.py  test_self_hosting_bugs.py
task-20250801-125956-0402/: state.md
tests/: __init__.py  conftest.py  parallel_test_task_2.py  test_data_models.py  test_enhanced_workflow_manager_reliability.py  test_env_config.py  test_hook_execution.py  test_memory_fallback.py  test_memory_system_integration.py  test_neo4j_client.py  test_neo4j_integration.py  test_no_stubs.py  test_orchestrator_governance.py  test_orchestrator_interfaces.py  test_orphaned_pr_recovery.sh  test_pattern_manager.py  test_program_manager.py  test_recipe_executor_integration.py  (+10 more)
(+2403 files in other folders)
